<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/upece_color"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/label_registro_receptor_nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/upece_color_texto_blanco" />

        <EditText
            android:id="@+id/txtEditarNombre"
            android:layout_width="@dimen/ancho_de_views"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margen_sup_inf_views"
            android:ems="10"
            android:enabled="false"
            android:inputType="text" 
            android:textColor="@color/upece_color_texto_blanco" 
            android:singleLine="true"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/label_registro_receptor_correo"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="@color/upece_color_texto_blanco" />

        <EditText
            android:id="@+id/txtEditarCorreo"
            android:layout_width="@dimen/ancho_de_views"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margen_sup_inf_views"
            android:ems="10"
            android:inputType="textWebEmailAddress" 
            android:textColor="@color/upece_color_texto_blanco"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/label_registro_receptor_telefonouno"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="@color/upece_color_texto_blanco"  />

        <EditText
            android:id="@+id/txtEditarTelefono1"
            android:layout_width="@dimen/ancho_de_views"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margen_sup_inf_views"
            android:ems="10"
            android:inputType="number" 
            android:textColor="@color/upece_color_texto_blanco" 
            android:singleLine="true"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/label_registro_receptor_telefonodos"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="@color/upece_color_texto_blanco" />

        <EditText
            android:id="@+id/txtEditarTelefono2"
            android:layout_width="@dimen/ancho_de_views"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margen_sup_inf_views"
            android:ems="10"
            android:inputType="numberSigned" 
            android:textColor="@color/upece_color_texto_blanco"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/label_registro_receptor_telefonotres"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/upece_color_texto_blanco"  />

        <EditText
            android:id="@+id/txtEditarTelefono3"
            android:layout_width="@dimen/ancho_de_views"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margen_sup_inf_views"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/upece_color_texto_blanco"
            android:singleLine="true"  />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/upece_color"
            android:orientation="horizontal"
            android:padding="16dp" 
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnActualizarReceptor"
                style="@style/DisenoBotones"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_Actualizar_receptor"
                android:layout_marginRight="10dp" />

            <Button
                android:id="@+id/btnEliminarReceptor"
                style="@style/DisenoBotones"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/button_eliminar_receptor" />
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>